# serde-query

./: Cargo.toml
scratch/: Cargo.toml
scratch/src/: lib.rs
serde-query/: Cargo.toml
serde-query-core/: Cargo.toml
serde-query-core/src/: lib.rs  node.rs  parse_input.rs  parse_query.rs  query.rs
serde-query-core/src/tests/: generate_basic.rs
serde-query-derive/: Cargo.toml
serde-query-derive/src/: lib.rs
serde-query/examples/: github.rs  github_query.rs
serde-query/src/: lib.rs
serde-query/tests/compile-fail/: conflicting_query.stderr  query_parse_error.stderr
