[package]
name = "serde-query-scratch"
version = "0.2.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"
description = "Serde-compatible streaming data-query language with a jq-like syntax"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pandaman64/serde-query/"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["serde-query-derive"]

[dependencies]
serde =  { workspace = true }
serde-query = { version = "0.2.0", path = "../serde-query/" }
serde-query-derive = { version = "0.2.0", path = "../serde-query-derive/", optional = true }

[dev-dependencies]
k9 = "0.12"
serde_json = { workspace = true }
trybuild = "1"
ureq = { version = "3", features = ["json"] }